[A3-03] : Added custom scrollbar , updated env template , refactored layout code , fixed error constants and fixed glow component for accessibility

--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,14 @@
     body {
         @apply bg-background text-foreground;
     }
+
+    ::-webkit-scrollbar {
+        @apply w-2;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        @apply bg-primary rounded-full;
+    }
 }
 
 @font-face {
